--- a/index.html
+++ b/index.html
@@ -23,6 +23,40 @@
       <li>Health</li>
     </ul>
   </header>
+  <aside class="left-aside"></aside>
+  <main class="main-container">
+    <article class="article-container">
+      <img class="image" src=https://w.wallhaven.cc/full/96/wallhaven-967zyk.jpg />
+      <h1 class="article-title">Article 1</h1>
+      <p class="article-content">Donee id élit non m porta gravida at eget metus. Fusee dapibus. telkis ac cursus commodo,
+        tortor mauris condimentum ntbh.</p>
+        <a href="#" class="article-link">View details >></a>
+    </article>
+    <article  class="article-container">
+      <img class="image" src=https://w.wallhaven.cc/full/2e/wallhaven-2eroxm.jpg />
+      <h1 class="article-title">Article 2</h1>
+      <p class="article-content">Donee id élit non mi porta gravida at eget met us Fusee dapibus. tellus ae cursus com modo,
+        tortor maurls condimentum mbh. ut fermentum massa justo sit amet nsus. Etiam porta sem
+        malesuada
+        magna mollis euismod. Donee sed odio dm. Donee id elit non mi porta gravida at eget metus.
+        Fusee dapibus. tellus ac cursus commodo, tortor mauns condimentum nlbh. ut fermentum
+        massa justo sit amet risus.
+        Edam porta sem malesuada magna mollis euismod. Donee sed odio dui. Donee id elrt non rm
+        porta gravida at eget metus. Fusee dapibus. tellus ac cursus commodo. tortor mauris
+        condimentum mbh, ut fermentum massa
+        justo sit amet risus. Edam porta sem malesuada magna mollis euismod.</p>
+        <a href="#" class="article-link">View details >></a>
+    </article>
+    <article class="article-container">
+      <img class="image" src=https://w.wallhaven.cc/full/2e/wallhaven-2em38y.jpg />
+      <h1 class="article-title">Article 3</h1>
+      <p class="article-content"> Donee sed odio dui. Cras Justo odio, dapibus ac facilists in, egestas eget quam. Vestibulum id
+        ligula porta felis euismod semper. Fusee dapibus. tellus ae cursus com modo, tortor maurís
+        condimentum nibh, ut fermentum massa justo sit a met risus.</p>
+        <a href="#" class="article-link">View details >></a>
+    </article>
+  </main>
+  <aside class="right-aside"></aside>
   <script src="src/app.js"></script>
 </body>
 </html>
