--- a/index.html
+++ b/index.html
@@ -79,6 +79,14 @@
         justo sit amet risus. Edam porta sem malesuada magna mollis euismod.</p>
       <a href="#" class="article-link">View details >></a>
     </article>
+    <aside class="right-aside">
+      <form class="login-form">
+        <input class="email-input" placeholder="Email address" />
+        <input class="password-input" type="password" placeholder="Password" />
+        <span class="remember-me-checkbox"><input type="checkbox" />Remember me</span>
+        <button class="submit-button" type="submit">Sign in</button>
+      </form>
+    </aside>
   </main>
   <script src="src/app.js"></script>
 </body>
