[ChenSicong]feat: add footer

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <header>
+  <header id="header">
     <ul class="header-list">
       <li>Home</li>
       <li>World</li>
@@ -88,6 +88,10 @@
       </form>
     </aside>
   </main>
+  <footer class="footer">
+    <p class="footer-first-line">Advance CSS homework built by <a href="https://cong-onion.cn">@ZwiebelnX</a></p>
+    <p class="footer-second-line"><a href="#header">Back to top</a></p>
+  </footer>
   <script src="src/app.js"></script>
 </body>
 
